// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JudgementDisplay > Responsive Layout > renders correctly on 375px mobile viewport (snapshot test) 1`] = `
<section
  aria-label="judgement-stage"
  class="judgement-stage"
>
  <div
    class="judgement-stage__panel"
    data-testid="judgement-box"
  >
    <p
      class="judgement-stage__copy"
    >
      You've got great taste!
    </p>
  </div>
  <div
    class="judgement-stage__actions"
  >
    <button
      class="judgement-stage__button judgement-stage__button--primary"
      data-testid="new-session-button"
      type="button"
    >
      Start New Session
    </button>
  </div>
</section>
`;

exports[`JudgementDisplay > Responsive Layout > renders correctly on desktop viewport (snapshot test) 1`] = `
<section
  aria-label="judgement-stage"
  class="judgement-stage"
>
  <div
    class="judgement-stage__panel"
    data-testid="judgement-box"
  >
    <p
      class="judgement-stage__copy"
    >
      You've got great taste! This is a longer judgement that should wrap nicely on both mobile and desktop screens without any horizontal scrolling issues.
    </p>
  </div>
  <div
    class="judgement-stage__actions"
  >
    <button
      class="judgement-stage__button judgement-stage__button--primary"
      data-testid="new-session-button"
      type="button"
    >
      Start New Session
    </button>
  </div>
</section>
`;
